compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__const_usage_wrong.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1498
expression: "const pair = #(1, 2.0)\nfn main() { 1 == pair }"
---
----- SOURCE CODE
const pair = #(1, 2.0)
fn main() { 1 == pair }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:2:18
  │
2 │ fn main() { 1 == pair }
  │                  ^^^^

Expected type:

    Int

Found type:

    #(Int, Float)
